Add transformer fine-tuning pipeline

--- a/notebooks/01_quality_control.ipynb
+++ b/notebooks/01_quality_control.ipynb
@@ -1,4 +1,4 @@
-{
+﻿{
   "cells": [
     {
       "cell_type": "markdown",
@@ -40,14 +40,14 @@
           "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "/content/drive/MyDrive/geneformer-tumor-classification\n"
+            "/content/drive/MyDrive/singlecell-tumor-classification\n"
           ]
         }
       ],
       "source": [
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')\n",
-        "#%cd /content/drive/MyDrive/geneformer-tumor-classification"
+        "#%cd /content/drive/MyDrive/singlecell-tumor-classification"
       ]
     },
     {
@@ -120,9 +120,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "counts: /content/drive/MyDrive/geneformer-tumor-classification/gse144735/raw/GSE144735_processed_KUL3_CRC_10X_raw_UMI_count_matrix.txt.gz\n",
-            "log_tpm: /content/drive/MyDrive/geneformer-tumor-classification/gse144735/raw/GSE144735_processed_KUL3_CRC_10X_natural_log_TPM_matrix.txt.gz\n",
-            "annotation: /content/drive/MyDrive/geneformer-tumor-classification/gse144735/raw/GSE144735_processed_KUL3_CRC_10X_annotation.txt.gz\n"
+            "counts: /content/drive/MyDrive/singlecell-tumor-classification/gse144735/raw/GSE144735_processed_KUL3_CRC_10X_raw_UMI_count_matrix.txt.gz\n",
+            "log_tpm: /content/drive/MyDrive/singlecell-tumor-classification/gse144735/raw/GSE144735_processed_KUL3_CRC_10X_natural_log_TPM_matrix.txt.gz\n",
+            "annotation: /content/drive/MyDrive/singlecell-tumor-classification/gse144735/raw/GSE144735_processed_KUL3_CRC_10X_annotation.txt.gz\n"
           ]
         }
       ],
@@ -161,7 +161,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "AnnData object with n_obs × n_vars = 27414 × 33694\n",
+            "AnnData object with n_obs Ã— n_vars = 27414 Ã— 33694\n",
             "    obs: 'Patient', 'Class', 'Sample', 'Cell_type', 'Cell_subtype'\n",
             "    layers: 'counts'\n"
           ]
@@ -654,3 +654,4 @@
   "nbformat": 4,
   "nbformat_minor": 5
 }
+
