--- a/notebooks/02_tokenisation.ipynb
+++ b/notebooks/02_tokenisation.ipynb
@@ -1,4 +1,4 @@
-{
+﻿{
   "cells": [
     {
       "cell_type": "markdown",
@@ -25,7 +25,7 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "%cd /content/drive/MyDrive/geneformer-tumor-classification"
+        "%cd /content/drive/MyDrive/singlecell-tumor-classification"
       ],
       "metadata": {
         "colab": {
@@ -42,7 +42,7 @@
           "name": "stdout",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "/content/drive/MyDrive/geneformer-tumor-classification\n"
+            "/content/drive/MyDrive/singlecell-tumor-classification\n"
           ]
         }
       ]
@@ -138,7 +138,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "AnnData object with n_obs × n_vars = 27414 × 24471\n",
+            "AnnData object with n_obs Ã— n_vars = 27414 Ã— 24471\n",
             "    obs: 'Patient', 'Class', 'Sample', 'Cell_type', 'Cell_subtype', 'n_genes_by_counts', 'log1p_n_genes_by_counts', 'total_counts', 'log1p_total_counts', 'pct_counts_in_top_50_genes', 'pct_counts_in_top_100_genes', 'pct_counts_in_top_200_genes', 'pct_counts_in_top_500_genes'\n",
             "    var: 'n_cells_by_counts', 'mean_counts', 'log1p_mean_counts', 'pct_dropout_by_counts', 'total_counts', 'log1p_total_counts', 'n_cells', 'highly_variable', 'means', 'dispersions', 'dispersions_norm'\n",
             "    uns: 'hvg', 'log1p'\n",
@@ -300,7 +300,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Ranking genes: 100%|██████████| 27414/27414 [00:01<00:00, 17865.76it/s]"
+            "Ranking genes: 100%|â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ| 27414/27414 [00:01<00:00, 17865.76it/s]"
           ]
         },
         {
