--- a/notebooks/01_quality_control.ipynb
+++ b/notebooks/01_quality_control.ipynb
@@ -1,4 +1,4 @@
-﻿{
+{
   "cells": [
     {
       "cell_type": "markdown",
@@ -634,9 +634,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "geneformer",
       "language": "python",
-      "name": "python3"
+      "name": "geneformer"
     },
     "language_info": {
       "codemirror_mode": {
@@ -654,4 +654,3 @@
   "nbformat": 4,
   "nbformat_minor": 5
 }
-
